--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,21 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!--OpenGraph-->
+  <meta property="og:site_name" content="Universidad Mexicana">
+  <meta property="og:locale" content="es_MX">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="UNIMEX | Universidad sin Fronteras.">
+  <meta property="og:description" content="Graduaciones UNIMEX ">
+  <meta property="og:url" content="https://unimex.edu.mx">
+  <meta property="og:image" content="https://unimex.edu.mx/img/about/message/Logo_UNIMEX.webp">
+  
+  <script async src="https://kit.fontawesome.com/1a716d43a7.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <app-root></app-root>
+
+  <main>
+    <app-root></app-root>
+  </main>
 </body>
 </html>
