--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://unimex.edu.mx">
   <meta property="og:image" content="https://unimex.edu.mx/img/graduaciones/Graduaciones-UNIMEX.jpg">
   
-  <script async src="./assets/js/1a716d43a7.min.js"></script>
+  <script async src="assets/js/1a716d43a7.min.js"></script>
 </head>
 <body>
 
