--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,8 @@
   <meta name="description" content="Aplicación para la impresión de Boletoas para los graduados de UNIMEX">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://kit-free.fontawesome.com">
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Righteous&display=swap" rel="stylesheet">
   <!--OpenGraph-->
   <meta property="fb:app_id" content="1728725357258341">
   <meta property="og:site_name" content="Universidad Mexicana">
@@ -19,9 +18,10 @@
   <meta property="og:description" content="Graduaciones UNIMEX ">
   <meta property="og:url" content="https://unimex.edu.mx">
   <meta property="og:image" content="https://unimex.edu.mx/img/graduaciones/Graduaciones-UNIMEX.jpg">
-  
+    
   <link rel="preload" href="assets/js/1a716d43a7.min.js" as="script">
   <script async src="assets/js/1a716d43a7.min.js"></script>
+  <link rel="preload" href="styles.b50a5733b5737c06d7b5.css" as="style">
 </head>
 <body>
 
