--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Graduaciones</title>
+  <title>Graduaciones | UNIMEX</title>
   <base href="">
   <meta name="description" content="Aplicación para la impresión de Boletoas para los graduados de UNIMEX">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,14 +10,14 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://kit-free.fontawesome.com">
   <!--OpenGraph-->
-  <meta property="fb:app_id" content="1728725357258341">
-  <meta property="og:site_name" content="Universidad Mexicana">
-  <meta property="og:locale" content="es_MX">
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="UNIMEX | Universidad sin Fronteras.">
-  <meta property="og:description" content="Graduaciones UNIMEX ">
-  <meta property="og:url" content="https://unimex.edu.mx">
-  <meta property="og:image" content="https://unimex.edu.mx/img/graduaciones/Graduaciones-UNIMEX.jpg">
+  <meta property="fb:app_id"             content="472078040329010">
+  <meta property="og:url"                content="https://unimexver.edu.mx/prueba-facebook">
+  <meta property="og:type"               content="article">
+  <meta property="og:title"              content="UNIMEX">
+  <meta property="og:description"        content="Graduaciones UNIMEX Veracruz Diciembre 2019">
+  <meta property="og:image"              content="https://unimexver.edu.mx/img/shered.jpg">
+	<meta property="og:image:width" 	   content="400">
+	<meta property="og:image:height"       content="500">
     
   <link rel="preload" href="assets/js/1a716d43a7.min.js" as="script">
   <script async src="assets/js/1a716d43a7.min.js"></script>
