cambios de area comercial

--- a/src/index.html
+++ b/src/index.html
@@ -5,19 +5,20 @@
   <title>Graduaciones | UNIMEX</title>
   <base href="">
   <meta name="description" content="Aplicación para la impresión de Boletoas para los graduados de UNIMEX">
+  <meta name="theme-color" content="#004b93">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="preconnect" href="https://kit-free.fontawesome.com">
   <!--OpenGraph-->
-  <meta property="fb:app_id"             content="472078040329010">
-  <meta property="og:url"                content="https://unimexver.edu.mx/prueba-facebook">
-  <meta property="og:type"               content="article">
-  <meta property="og:title"              content="UNIMEX">
-  <meta property="og:description"        content="Graduaciones UNIMEX Veracruz Diciembre 2019">
-  <meta property="og:image"              content="https://unimexver.edu.mx/img/shered.jpg">
-	<meta property="og:image:width" 	   content="400">
-	<meta property="og:image:height"       content="500">
+  <meta property="fb:app_id" content="472078040329010">
+  <meta property="og:url" content="https://unimexver.edu.mx/graduaciones/index.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="UNIMEX">
+  <meta property="og:description" content="Graduaciones UNIMEX Mayo de 2020">
+  <meta property="og:image" content="https://unimexver.edu.mx/img/shared.jpg">
+	<meta property="og:image:width" content="400">
+	<meta property="og:image:height" content="500">
     
   <link rel="preload" href="assets/js/1a716d43a7.min.js" as="script">
   <script async src="assets/js/1a716d43a7.min.js"></script>
