--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,15 @@
 	<meta property="og:image:height" content="500">
     
   <link rel="preload" href="assets/js/1a716d43a7.min.js" as="script">
-  <script async src="assets/js/1a716d43a7.min.js"></script>
+  <script async="" src="assets/js/1a716d43a7.min.js"></script>
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
 
   <main>
     <app-root></app-root>
   </main>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
